tests/baselines/reference/assignmentCompatWithStringIndexer3.errors.txt
==== tests/cases/compiler/assignmentCompatWithStringIndexer3.ts (3 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    var a: A;
           ~
!!! assignmentCompatWithStringIndexer3.ts(7,8): error TS2095: Could not find symbol 'A'.
    var b1: { [x: string]: string; }
    a = b1; // error
    b1 = a; // error
    
    module Generics {
        class A<T extends Derived> {
            [x: string]: T;
        }
       
        function foo<T extends Derived>() {
            var a: A<T>;
            var b: { [x: string]: string; }
            a = b; // error
            ~
!!! assignmentCompatWithStringIndexer3.ts(20,9): error TS2012: Cannot convert '{ [x: string]: string; }' to 'A<T>':
!!! 	Index signatures of types '{ [x: string]: string; }' and 'A<T>' are incompatible.
            b = a; // error
            ~
!!! assignmentCompatWithStringIndexer3.ts(21,9): error TS2012: Cannot convert 'A<T>' to '{ [x: string]: string; }':
!!! 	Index signatures of types 'A<T>' and '{ [x: string]: string; }' are incompatible.
        }
    }